@@ -1,5 +1,9 @@
 [UTF-8][Japanese]
 
+*Ver3.xx : 2019/xx/xx
+
+-POCKETのシェア数が取得できなくなっていたので取得機能を削除しました。((query.yahooapis.com が突然サービス終了したため))
+
 *Ver3.22 : 2019/02/15
 
 -【Fix】sitemapプラグインが動かない。
